<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Highway</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1__title">Welcome Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2__title">Highway Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_2__desc">Book Highway tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4__title">Highway Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="slide__4_desc">Book tickets of any transportation and travel in our country!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="preview_description">Image preview will appear here</string>
    <string name="newline">\n</string>
    <string name="menu_new_booking">New Booking</string>
    <string name="menu_my_booking">My Booking</string>
    <string name="menu_add_vehicle">Add Vehicle</string>
    <string name="menu_assign_driver_to_vehicle">Assign D2V</string>
    <string name="men_track_your_booking">Track Your Booking</string>
    <string name="menu_rate_card">Rate Card</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_Help">Help</string>
    <string name="menu_About">About Us</string>
    <string name="menu_tool">Tool</string>
    <string name="menu_share">Share</string>
    <string name="name">User name</string>
    <string name="menu_send">Send</string>
    <string name="menu_term_condition">Term and Condition</string>
    <string name="menu_add_driver">Add Driver</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_get_allvehicle">GetAll Vehicle</string>
    <string name="menu_get_alldriver">GetAll Driver</string>
    <string name="menu_get_millbooking">Mill Booing</string>
    <string name="menu_get_bookload">Book Load</string>
    <string name="email">ramashish.bhumca16@gmail.com</string>
    <string name="nav_header_subtitle">Mobile no</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_txt">Explore new ways to travel with C2C</string>
    <string name="login_txt_second">Please enter your mobile number to proceed</string>
    <string name="verify_txt">Please verify the OTP send to</string>
    <string name="opt_txt">Auto verify your</string>
    <string name="opt_txt_two">OTP in ( 00:10 )</string>
    <string name="allow_location_txt">Have a hassle-free booking experience by giving us</string>
    <string name="location_txt">Location ( for finding available rides )</string>
    <string name="location_phone_txt">Phone ( for account security verification )</string>
    <string name="gps_txt">All C2C cabe to turn on your phone GPS for</string>
    <string name="gps_txt_one">accurate pickup</string>
    <string name="nav_profile_progress_txt">Complete your Profile( 35% )</string>
    <string name="Rs">\u20B9</string>
    <string name="Rs_distance_price">"\u20B9" 0.0</string>
    <string name="close">Close Sheet</string>
    <string name="expand">Expand Sheet</string>
    <string name="Rs_one">"\u20B9" 15.0</string>
    <string name="Rs_one1">"\u20B9" 645.00</string>
    <string name="Rs_basefair">"\u20B9" 65.00</string>
    <string name="Rs_one999">"\u20B9" 999.00</string>
    <string name="trip_heading">"Trip#CRN68086794</string>
    <string name="driver_on_the_way_to_pickup">"Driver on the way to pickup"</string>
    <string name="driver_will_call_this_contact_while_delivery">"Driver while call this contact while delivery"</string>
    <string name="support">"Support"</string>
    <string name="invalid_mobile">Please Enter Valid Phone!!!</string>
    <string name="valid_phone">Enter 10 Number Phone!!!</string>
    <string name="invalid_email">Please Enter Valid Email!!</string>
    <string name="invalid_username">Please Enter Valid Username!!</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="User_Mob">User mobile no</string>
    <string name="driver_will_call_this_contect_while_delivery">Driver will call this contect while delivery</string>
    <string name="enter_otp_on_phone">Enter the otp send on your phone</string>
    <string name="search">Search</string>
    <string name="app_name_bootom_sheet">Bottom Sheet Dialog Fragment</string>
    <string name="action_share">Share</string>
    <string name="action_receiver_contact">Receiver Contact Number.</string>
    <string name="action_diver_will_call">Driver will call the contact while delivery</string>
    <string name="action_copy">Copy</string>
    <string name="action_print">Print</string>
    <string name="bangalore_international_airport_pvt_ltd">Bangalore international airport pvt ltd</string>
    <string name="add_another_drop_location">Add another drop location</string>
    <string name="Pune_Airport">Pune Airport</string>
    <string name="location">Bangalore international airpoart pvt LTD,Kempegowda inti Airpoart Rd,Hunchur,Karnataka 560300,India</string>
    <string name="upcoming_fragment">Hello UpCoing fragment</string>
    <string name="ongoing_fragment">Hello OnGoing fragment</string>
    <string name="cenceled_fragment">Cenceled fragment</string>
    <string name="Completed_fragment">Completed fragment</string>
    <string name="By_accepting____">By accepting to create account you accepted</string>
    <string name="term_and_condition">terms and canditions and privacy policy</string>
    <string name="of_highway">Of Highway</string>
    <string name="hello_newbooking_fragment">Hello new booking fragment</string>
    <string name="hello_mybooking_fragment">Hello my booking fragment</string>
    <string name="hello_wallet_fragment">Hello wallet fragment</string>
    <string name="hello_notificaton_fragment">Hello notification fragment</string>
    <string name="hello_ratecard_fragment">Hello rateCard fragment</string>
    <string name="hello_help_fragment">Hello help fragment</string>
    <string name="hello_about_fragment">Hello about fragment</string>
    <string name="permission_denied_explanation">Location access denied</string>
    <string name="settings">Enable Location</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="vehicle_name_type"> Vehicle Name Type</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="hello_dashboard_fragment">Hello Dashborad fragment</string>
    <string name="hello_upcoming_fragment"> UpComing Booking</string>
    <string name="hello_ongoing_fragment"> OnGoing Booking</string>
    <string name="hello_pending_fragment"> Pending  Booking</string>
    <string name="hello_completed_fragment"> Completed  Booking</string>
    <string name="hello_cancel_fragment"> Cancle Booking</string>
    <string name="title_activity_new_booking_maps">Map</string>
    <string name="title_activity_booking_maps">Map</string>
    <string name="title_activity_new_dashboard">NewDashboardActivity</string>
    <string name="title_activity_new_booking_map">Map</string>
    <string name="please_check_your_internet_connection">Please check internet Connection!!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_button1">Wrong/Inappropriate Vehicle</string>
    <string name="radio_button2">My reason is not listed</string>
    <string name="radio_button3">Driver Asked me to cancel</string>
    <string name="radio_button4">Driver is unprofessional</string>
    <string name="radio_button5">Changed my mind</string>
    <string name="radio_button6">Driver said he will be late</string>
    <string name="radio_button7">Unable to connect driver</string>
    <string name="radio_button8">UnExpacted a shorter arival time</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancle</string>
    <string name="navigate_to_source">Navigate to source</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="privacy">Privacy</string>
    <string name="otp_sent">One Time Password(OTP) has been sent to above number</string>
    <string name="reject">Reject</string>
    <string name="arrived">Arrived</string>
    <string name="drop_at">Drop At</string>
    <string name="pick_up_location">PickUp Location</string>
    <string name="FACEBOOK_APP_ID" translatable="false">2108224882621147</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">906313ffc75e8741427bf9b70d99df0c</string>
    <string name="google_signin_server_client_id" translatable="false">947400722633-4ur8bmnlv2urm2knoos0qh98da2e435e.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Register Now</string>
    <string name="or_connect_with_social">Or connect with social</string>
    <string name="walk_1">Walkthrough</string>
    <string name="walk_2">Walkthrough</string>
    <string name="walk_3">Walkthrough</string>
    <string name="walk_1_description">Introducing Eagle cab Services to take rides from the Eagle app users.</string>
    <string name="walk_2_description">Be your own boss, set your own schedule. Get the latest driving features all in one spot.</string>
    <string name="walk_3_description">Get well paid to help out strangers get to where they need to go. Withdraw your earnings every week/monthly.</string>
    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum, non proident, sunt in culpa qui officia deserunt mollit anim id est laborum,non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="welcome_back_sign_in_to_continue">Welcome back, sign in to continue</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="invalid_password">Please enter password</string>
    <string name="phonenumberValidation">Please Enter Phone number</string>
    <string name="submit">Submit</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="ratings">Ratings</string>
</resources>