<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_booking"
            android:icon="@drawable/new_booking_image"
            android:title="@string/menu_new_booking" />
        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/my_booking_image"
            android:title="@string/menu_my_booking" />
        <item
            android:id="@+id/nav_track_your_booking"
            android:icon="@drawable/track_your_booking"
            android:title="@string/men_track_your_booking" />

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet_account"
            android:title="@string/menu_wallet" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting_build_black_24dp"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification_image"
            android:title="@string/menu_notification" />

        <item
            android:id="@+id/nav_rate_card"
            android:icon="@drawable/ic_rate_card_star_border_black_24dp"
            android:title="@string/menu_rate_card" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_image"
            android:title="@string/menu_Help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_image"
            android:title="@string/menu_About" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>
