<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_new_booking"
            android:icon="@drawable/new_booking_image"
            android:title="@string/menu_new_booking" />
        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/my_booking_image"
            android:title="@string/menu_my_booking" />

        <item
            android:id="@+id/nav_add_vehicle"
            android:icon="@drawable/add_vihicle"
            android:title="@string/menu_my_booking" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet_account"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification_image"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_rate_card"
            android:icon="@drawable/ic_rate_card_star_border_black_24dp"
            android:title="@string/menu_rate_card" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_image"
            android:title="@string/menu_Help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_image"
            android:title="@string/menu_About" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />

        <item
            android:id="@+id/nav_trmCondition"
            android:icon="@drawable/term_and_condition"
            android:title="@string/menu_term_condition" />



    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black"
                android:title="@string/menu_logout"
                />
           <!-- <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />-->
        </menu>
    </item>

</menu>
