<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".customer.customerActivity.CalcelOrderActivityWithReason">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="?attr/colorPrimary"
                app:contentInsetStartWithNavigation="0dp"
                android:backgroundTint="@color/white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_3"
            android:background="@color/darkwhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button1"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button2"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button3"
                    android:textSize="18sp" />


                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button4"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button5"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button6"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button7"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button8"
                    android:textSize="18sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_height_120"
                android:layout_marginLeft="@dimen/margin_left_20"
                android:layout_marginTop="@dimen/margin_50"
                android:text=" Comment"
                android:gravity="top|left"
                android:inputType="text"
                android:layout_marginRight="@dimen/padding_right_20"
                android:background="@drawable/edit_text_shape" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/BtnOrderCancleSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_left_15"
        android:layout_marginTop="@dimen/margin_top_20"
        android:layout_marginRight="@dimen/margin_right_10"
        android:layout_marginBottom="@dimen/margin_bottom_20"
        android:background="@drawable/rounded_btn_shape"
        android:text="Submit "
        android:textColor="@color/white"/>

</RelativeLayout>