<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/NevHeaderProfileBtn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignBottom="@+id/txt_mobNo"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/ic_next_arrow_right_black_24dp" />


        <TextView
            android:id="@+id/txt_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_toRightOf="@+id/profile_imageView"
            android:text="@string/nav_header_title"
            android:layout_marginTop="@dimen/_10dp"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_mobNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_profile_name"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_toRightOf="@+id/profile_imageView"
            android:text="@string/nav_header_subtitle"
            android:maxLines="1"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/profile_image"
            android:tint="@color/white"
            app:civ_border_overlay="true"
            app:civ_circle_background_color="@color/project_color"
            app:civ_border_color="@color/yellow"
            app:civ_border_width="1dp"
            />
    </RelativeLayout>
</LinearLayout>
