<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.customerFragment.RatingBottomDialogFragmentForCustomer">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/provider_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:maxLines="2"
            android:text="@string/ratings"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_txt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:src="@drawable/user" />

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5"

                android:progressTint="#ebdb00"
                android:stepSize="1" />
<!--            android:rating="3.5"-->

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_border"
                android:gravity="top|start"
                android:hint="@string/write_your_comment"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="250"
                android:maxLines="3"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_small" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textColor="#FFF" />

        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>